<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/onboardingFragment">

    <fragment
        android:id="@+id/onboardingFragment"
        android:name="com.focusflow.feature.onboarding.OnboardingFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_onboarding_to_dashboard"
            app:destination="@id/dashboardFragment"
            app:popUpTo="@id/onboardingFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.focusflow.feature.dashboard.DashboardFragment"
        android:label="@string/nav_home" />

    <fragment
        android:id="@+id/sessionFragment"
        android:name="com.focusflow.feature.session.SessionFragment"
        android:label="@string/nav_session" />

    <fragment
        android:id="@+id/analyticsFragment"
        android:name="com.focusflow.feature.analytics.AnalyticsFragment"
        android:label="@string/nav_analytics" />

    <fragment
        android:id="@+id/appUsageAnalyticsFragment"
        android:name="com.focusflow.feature.analytics.AppUsageAnalyticsFragment"
        android:label="@string/app_usage_title" />

    <fragment
        android:id="@+id/focusZoneFragment"
        android:name="com.focusflow.feature.focuszone.FocusZoneFragment"
        android:label="@string/focus_zone_title" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.focusflow.feature.settings.SettingsFragment"
        android:label="@string/nav_settings" />
</navigation>
